# mandarin

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .lighthouserc.json  .pre-commit-config.yaml  ADVERSARIAL_AUDIT.md  BRAND.md  BUILD_STATE.md  CHANGELOG.md  CLAUDE.md  DOCTRINE.md  Dockerfile  LAUNCH_RUNBOOK.md  LICENSE  SECURITY.md  SOURCES.md  THIRD_PARTY_LICENSES.md  capacitor.config.ts  docker-entrypoint.sh  fly.toml  learner_profile.json  litestream.yml  openclaw.yaml  pyproject.toml  requirements.txt  rewrite_hsk4.py  rewrite_hsk5.py  rewrite_passages.py  run  sbom.json  schema.sql  shell-hook.sh  sla_pedagogy_research.md
.github/: dependabot.yml  pull_request_template.md  zap-rules.tsv
MandarinApp/: Info.plist  MandarinApp.swift  build.sh  gen_icon.py
content_gen/: EDITORIAL_AUDIT.md  LENGTH_BENCHMARK.md  STATUS_REPORT.md  STRUCTURAL_AUDIT.md  TONE_AUDIT.md  add_passages.py  aesthetic_dimensions.md  apply_moral_cuts.py  apply_pinyin.py  build_batch.py  build_hsk5.py  character_bible.md  comedy_standard.md  compress_hsk8.py  compress_passages.py  cut_thesis_codas.py  edit_comedy_12.py  editorial_audit_v1.md  ensemble_dialogues_hsk1_3.json  ensemble_dialogues_hsk4_6.json  ensemble_dialogues_hsk7_9.json  fix_comedy_passages.py  fix_dialogue_feedback.py  fix_quotes.py  gen_dialogues.py  gen_h8b2_part1.py  gen_h8b2_part2.py  gen_h8b2_part3.py  gen_h8b2_part4.py  gen_h8b3_part1.py  gen_h8b3_part2.py  gen_h8b3_part3.py  gen_h8b4.py  gen_helpers.py  gen_hsk2_part1.py  gen_hsk2_part2.py  gen_hsk8_b2.py  gen_utils.py  hsk1_batch1.json  hsk1_batch2.json  (+128 more)
data/: ba_bei_patterns.json  chengyu.json  cloze_contexts.json  collocations.json  common_passwords.txt  complement_patterns.json  confusable_pairs.json  constructions.json  dialogues.json  error_sentences.json  grammar_patterns.json  homophones.json  hsk_requirements.json  mandarin.db  mandarin.db-shm  mandarin.db-wal  measure_words.json  media_catalog.json  media_health.json  milestones.json  number_drills.json  pragmatic_scenarios.json  radicals.json  reading_passages.json  real_world_tasks.json  register_scenarios.json  sentence_templates.json  session_trace.jsonl  session_trace.jsonl.1  slang_expressions.json  synonym_groups.json  tone_drills.json  tone_sandhi.json
desktop/: entry.py  mandarin-server.spec
docs/: alert-automation-setup.md  copyright_risk_analysis_2026_03_13.md  cost-of-delay.md  design-audit.md  design-patterns.md  email-and-experimentation-audit.md  experiment-assignment-architecture.md  financial-model.md  gold_standard_doctrine.md  multi-region.md  openapi.yaml  polish_notes.md  ux-playbook.md  vendor-migration.md  visual-qa-checklist.yaml
flutter_app/: README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
mandarin/: __init__.py  __main__.py  _paths.py  audio.py  auth.py  caliper.py  cc_export.py  churn_detection.py  cli.py  cli_auth.py  config.py  context_notes.py  conversation.py  counter_metrics.py  counter_metrics_actions.py  counter_metrics_validation.py  data_retention.py  delayed_validation.py  diagnostics.py  dictionary.py  display.py  doctor.py  email.py  experiment_governance.py  experiments.py  export.py  feature_flags.py  fsrs.py  fsrs_calibration.py  grammar_extra_hsk1_2_r2.py  grammar_extra_hsk1_3.py  grammar_extra_hsk1_3_r3.py  grammar_extra_hsk3_4_r2.py  grammar_extra_hsk4_5_r3.py  grammar_extra_hsk4_6.py  grammar_extra_hsk5_6_r2.py  grammar_extra_hsk6_9_r3.py  grammar_extra_hsk7_9.py  grammar_extra_hsk7_9_r2.py  grammar_linkage.py  (+43 more)
marketing/: ad-copy.md  affiliate-program.md  brand-applications.md  brand-guide.md  brand-narrative.md  churn-prevention.md  community-content.md  community-strategy.md  competitive-analysis.md  competitor-intel.md  content-calendar.md  discord-plan.md  distribution-plan.md  email-doctrine-checklist.md  email-sequences.md  feature-announcements.md  forum-directory.md  keyword-strategy.md  launch-playbook.md  lifecycle-strategy.md  messaging-guide.md  metrics-dashboard.md  newsletters.md  partner-kit.md  partner-outreach.md  partner-prospects.md  positioning.md  press-kit.md  reddit-playbook.md  referral-program.md  seo-blog-posts.md  social-media.md  testimonial-system.md  tracking-plan.md  youtube-scripts.md
mobile/: README.md  capacitor.config.ts  generate-assets.sh  ios-plist-additions.xml  package-lock.json  package.json
n8n/: docker-compose.yml
operations/: monitoring-guide.md
platform-assets/: README.md  asset-specs.md
reports/: weekly-report-2026-02-18.md  weekly-report-2026-02-18.txt
scripts/: add_media_explanations.py  add_reading_series.py  audit_check.py  auto_fix_ci.py  build_passage_vocab_index.py  check_doc_drift.py  check_phantom_schemas.py  ci_failure_ingest.py  content_sources.py  convert_quiz_to_mc.py  coverage_floors.py  dr_test.sh  expand_content.py  gen_data_dictionary.py  gen_sbom.sh  generate_sbom.py  generate_screenshots.py  ingest_cedict.py  ingest_forvo.py  ingest_media.py  ingest_news.py  ingest_open_subtitles.py  ingest_tatoeba.py  ingest_wikimedia_audio.py  load_test.py  process_phase2_assets.py  release_gate.sh  rewrite_dialogue_options.py  route_audit.py  run_security_scan.py  run_tests.sh  smoke_test.sh  validate_secrets.py  visual_regression.py
src-tauri/: tauri.conf.json
tests/: conftest.py  shared_db.py  test_accountability.py  test_admin_routes.py  test_adversarial.py  test_advisors.py  test_agentic.py  test_ai_content_reaudit_cov.py  test_ai_drill_generator_cov.py  test_ai_outcome_measurement.py  test_ai_reading_content_cov.py  test_ai_research_synthesis_cov.py  test_ai_validation_cov.py  test_analyzers_funnel_cov.py  test_andon.py  test_anti_gaming.py  test_api_error_handler.py  test_audio_coherence.py  test_audio_safety.py  test_audit_e2e.py  test_auth.py  test_auto_executor_cov.py  test_bayesian.py  test_beta_gate_cov.py  test_caliper_xapi_cov.py  test_capability_gaps.py  test_changelog_agent.py  test_character_analysis.py  test_classroom_routes.py  test_clv.py  test_commercial.py  (+197 more)
(+1446 files in other folders)
